--- a/KolinAPI/KolinAPI/Dockerfile
+++ b/KolinAPI/KolinAPI/Dockerfile
@@ -9,17 +9,17 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["KolinAPI/KolinAPI.csproj", "KolinAPI/"]
-RUN dotnet restore "./KolinAPI/./KolinAPI.csproj"
+COPY ["KollinAPI/KollinAPI.csproj", "KollinAPI/"]
+RUN dotnet restore "./KollinAPI/./KollinAPI.csproj"
 COPY . .
-WORKDIR "/src/KolinAPI"
-RUN dotnet build "./KolinAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/KollinAPI"
+RUN dotnet build "./KollinAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./KolinAPI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./KollinAPI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "KolinAPI.dll"]
+ENTRYPOINT ["dotnet", "KollinAPI.dll"]
